--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "my-app",
   "private": true,
-  "version": "0.0.0",
+"engines": {
+  "node": "18.x"
+},
+"version": "0.0.0",
   "type": "module",
+  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
